# red-packet-2024

./: README.md
landing/: index.html
part1/: _idea.txt  nginx.conf  setup.sh
part1/src/: index.php  news.inc.php  news.php
part2/: Cargo.toml  _idea.txt  hb-ansi.txt  hb-ascii.txt
part2/src/: draw.rs  main.rs  telnet.rs
writeup/: README.md
